<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_kitap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/soldan"
        android:layout_marginTop="@dimen/üstten"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat= "@drawable/yuz"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/butonAc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_kitap" />


    <FrameLayout
        android:id="@+id/fragment_container"
        android:name="com.damla.fragmentexamplekotlin.SimpleFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_simple"
        >

    </FrameLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bt_open"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sv_ozet"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:text="@string/butonSonraki"
        android:onClick="Sonraki"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_baslik"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/iv_kitap"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/üstten"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/baslık1"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:textSize="24sp"
        >
    </com.google.android.material.textview.MaterialTextView>
    <ScrollView
        android:id="@+id/sv_ozet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_baslik"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_baslik"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ozet1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />

    </ScrollView>







</androidx.constraintlayout.widget.ConstraintLayout>